# EX4

./: Astar.h  Astar.txt  BFS.txt  BestFifstSearch.txt  BestFirstSearch.cpp  BestFirstSearch.h  BfsSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DFS.txt  Dfs.cpp  Dfs.h  FileCacheManager.cpp  FileCacheManager.h  Matrix.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  OA.cpp  OA.h  README.md  Searcheable.h  Searcher.h  Server.h  Solver.cpp  Solver.h  State.h  all_matrixs.txt  main.cpp  tester.cpp  tester.h
